source/blender/depsgraph/intern/eval/deg_eval_runtime_backup_sequencer.h
@@ -23,6 +23,10 @@
 
 #pragma once
 
+#include "DNA_session_uuid_types.h"
+
+#include "BLI_session_uuid.h"
+
 #include "intern/depsgraph_type.h"
 #include "intern/eval/deg_eval_runtime_backup_sequence.h"
 
@@ -43,7 +47,7 @@ class SequencerBackup {
 
   const Depsgraph *depsgraph;
 
-  Map<Sequence *, SequenceBackup> sequences_backup;
+  Map<SessionUUID, SequenceBackup> sequences_backup;
 };
 
 }  // namespace deg
